--- a/Web.Statu/Views/Insolvence/PristupOmezen.cshtml
+++ b/Web.Statu/Views/Insolvence/PristupOmezen.cshtml
@@ -40,6 +40,7 @@
                     <li>týkající se fyzické osoby, která je politicky angažovaní;</li>
                     <li>týkající se fyzické osoby, která sponzorovala alespoň jednou politickou stranu;</li>
                     <li>insolvence se týka osob či skutečností, kde je její zveřejněníve veřejném zájmu tuto info</li>
+                    <li>insolvence nebyla odstraněna z insolvenčního rejstříku</li>
                 </ol>
                 <div class="small">
                     Pozn: Stát zveřejňuje v insolvenčních rejstříku všechna insolvenční řízení bez omezení. Tato omezení jsme si stanovili my sami dobrovolně s ohledem na
