--- a/Web.Statu/Views/Home/Index.cshtml
+++ b/Web.Statu/Views/Home/Index.cshtml
@@ -166,7 +166,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fde54c', end
             <div class="watcher__title">
                 <img src="/Content/img/icon-contracts.svg">
                 <h2 class="new-title">
-                    Hlídač kauz
+                    <a href="https://texty.hlidacstatu.cz">Hlídač kauz</a>
                 </h2>
             </div>
             <div class="block-tags">
