--- a/Web.Statu/Views/Home/Tmp.cshtml
+++ b/Web.Statu/Views/Home/Tmp.cshtml
@@ -1,11 +1,20 @@
 ﻿@using HlidacStatu.Lib
 
+@using HlidacStatu.Web.Framework
+
 @{
     ViewBag.Title = "";
 
 }
 
 <h2>Current time: @(DateTime.Now.ToString("yyyy-MM-dd HH:mm:ss.ffff"))</h2>
+
+<h3>Is admin @Util.CurrUserInRole("Admin")</h3>
+
+@using (Html.IfInRoles(this.User,"Admin"))
+{
+    <b>xxx</b>
+}
 
 @Html.Action("CachedAction_Child_debug", new { model = "", NameOfView = "tmp_child", key = "1", auth = this.User.Identity.IsAuthenticated })
 
