--- a/Web.Statu/Views/Home/KIndex.cshtml
+++ b/Web.Statu/Views/Home/KIndex.cshtml
@@ -107,7 +107,7 @@
 
                 <tr>
                     <td>
-                        KINDEX
+                        KINDEX hodnota
                     </td>
                     @for (int y = fromY; y <= toY; y++)
                     {
