kindex debug pages rename

--- a/Web.Statu/Views/Home/KIndexM.Porovnat.cshtml
+++ b/Web.Statu/Views/Home/KIndexM.Porovnat.cshtml
@@ -107,7 +107,7 @@
                     {
                         <td>
                             <b>@HlidacStatu.Lib.Data.Firmy.Get(ki.Ico).Jmeno</b>
-                            <a href="/kindex/@ki.Ico"><i class="fas fa-chart-line"></i></a>
+                            <a href="/kindexm/@ki.Ico"><i class="fas fa-chart-line"></i></a>
                             <br/>@ki.Ico
                         </td>
                     }
