--- a/Web.Statu/Views/Kindex/Debug.Start.cshtml
+++ b/Web.Statu/Views/Kindex/Debug.Start.cshtml
@@ -29,7 +29,7 @@
 <div class="row">
     <div class="col-xs-12 col-sm-12">
         <h4>K-Index pro jednu organizaci</h4>
-        <form method="get" action="/kindex" class="form-search__input-wrapper" role="form">
+        <form method="get" action="/kindex/debug" class="form-search__input-wrapper" role="form">
 
             <input class="form-search__input" id="id" name="id" value="" placeholder="IČO organizace " style="max-width: none;" type="text">
             <button class="form-search__btn" type="submit">K-Index pro jednu organizaci</button>
@@ -41,7 +41,7 @@
 <div class="row">
     <div class="col-xs-12 col-sm-12">
         <h4>Porovnat K-Index pro více organizací</h4>
-        <form method="get" action="/kindex/porovnat" class="form-search__input-wrapper" role="form">
+        <form method="get" action="/kindex/debug/porovnat" class="form-search__input-wrapper" role="form">
 
             <input class="form-search__input" id="ico" name="ico" value="" placeholder="IČ organizací, oddelené čárkami, mezerou, středníkem " style="max-width: none;" type="text">
             <button class="form-search__btn" type="submit">Porovnat K-Index pro více organizací</button>
