--- a/Web.Statu/Views/Kindex/Debug.cshtml
+++ b/Web.Statu/Views/Kindex/Debug.cshtml
@@ -112,12 +112,22 @@
                     @for (int y = fromY; y <= toY; y++)
                     {
                         <td>
+                            <span style="font-size:20px;font-weight:bold;padding:5px;color:@(Model.ForYear(y).KIndexLabelColor)">@Model.ForYear(y).KIndexLabel.ToNiceDisplayName()</span>
                             @HlidacStatu.Util.RenderData.NiceNumber(Model.ForYear(y).KIndex ?? 0)
                         </td>
                     }
                 </tr>
-
-
+                <tr>
+                    <td>
+                        KINDEX hodnota
+                    </td>
+                    @for (int y = fromY; y <= toY; y++)
+                    {
+                        <td>
+                            @HlidacStatu.Util.RenderData.NiceNumber(Model.ForYear(y).KIndex ?? 0)
+                        </td>
+                    }
+                </tr>
                 <tr>
                     <td>
                         Počet smluv
